script to make a templatized sass file so that i can use @import_tree
- use execsync to build the sass file upong launch of server
- add assets/css/app.css.sass to .gitignore, and to nodemon ignore line

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "npm": "1.2.x"
   },
   "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/nodemon -e coffee,jade,sass server.coffee"
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon --ignore 'assets/css/app.css.sass' -e coffee,jade,sass server.coffee"
   },
   "dependencies": {
     "async": "latest",
     "coffee-script": "latest",
     "connect-assets": "latest",
     "connect-flash": "latest",
+    "execSync": "latest",
     "express": "latest",
     "jade": "latest",
     "nodemon": "latest",
