--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "1.2.x"
   },
   "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/nodemon --ignore 'assets/css/app.css.sass' -e coffee,jade,sass server.coffee"
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon --ignore 'assets/css/app.css.sass' --ignore 'assets/css/pages' --ignore 'assets/js/pages' --ignore 'views/pages' -e coffee,jade,sass server.coffee"
   },
   "dependencies": {
     "async": "latest",
